Fix problem 9 solution

--- a/worksheets/worksheet1_solns.ipynb
+++ b/worksheets/worksheet1_solns.ipynb
@@ -64,6 +64,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### 7. Getting to know our coding standards\n",
     "\n",
@@ -92,9 +94,7 @@
     "    m = 'Some things that are true:\\n' + thing(L3[i]) + \"\\n\" + thing2(L3[i]) + '\\n\\n'\n",
     "    print(m)\n",
     "```"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -287,7 +287,7 @@
     "\n",
     "# Create the lines that will be included in the file\n",
     "line1 = (\"#\"*N + \" \"*N)*4\n",
-    "line2 = (\" \"*N + \"#\"*N)*4\n",
+    "line2 = line1[::-1]   #  line1 reversed; could also use (\" \"*N + \"#\"*N)*4\n",
     "\n",
     "# Add the lines to the file\n",
     "output_fo = open(output_fn, \"w\")\n",
@@ -295,7 +295,7 @@
     "    for j in range(N):\n",
     "        output_fo.write(line1+\"\\n\")\n",
     "    for j in range(N):\n",
-    "        output_fo.write(line1+\"\\n\")\n",
+    "        output_fo.write(line2+\"\\n\")\n",
     "output_fo.close()"
    ]
   },
