Minor revisions to worksheet 2 solutions

--- a/worksheets/worksheet2_soln.ipynb
+++ b/worksheets/worksheet2_soln.ipynb
@@ -4,28 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Worksheet 2\n",
+    "# Worksheet 2 Solutions\n",
     "\n",
     "## MCS 275 Spring 2021 - David Dumas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Coding challenges instead of new material (again)\n",
-    "\n",
-    "Normally, a worksheet covers the material from the previous week and from Monday's lecture.\n",
-    "\n",
-    "However, there is no lecture on Monday this week, and we spent the first week on review of prerequisite material.  Therefore, like the first worksheet, this one must focus on coding exercises that can be completed with MCS 260-level Python experience.\n",
-    "\n",
-    "The problems on this worksheet are a bit more complex and open-ended than Worksheet 1, and aim to cover some topics not seen on the last worksheet.\n",
-    "\n",
-    "Worksheet 3 will be the first \"normal\" one of MCS 275.\n",
-    "\n",
-    "## Instructions\n",
-    "\n",
-    "Complete these coding exercises.  Each one asks you to write one or more programs or modules.  Even though these are not collected, you should get into the habit of following the [coding standards](https://dumas.io/teaching/2021/spring/mcs275/doc/codestd.pdf) that apply to all graded work in MCS 275."
    ]
   },
   {
@@ -50,19 +31,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "double_letters_basic(\"aardvark\") returns 1\n",
+      "double_letters_basic(\"space wasps---most of whom are not hostile!!\") returns 3\n",
+      "double_letters_basic(\"the raccoon nook keepers in Mississippi cooked the books\") returns 9\n",
+      "double_letters_basic(\"Oolong\") returns 0\n",
+      "\n",
+      "Enter text to pass to double_letters_basic:Hello everyone!!\n",
+      "double_letters_basic(\"Hello everyone!!\") returns 2\n"
+     ]
+    }
+   ],
    "source": [
     "# MCS 275 Spring 2021 Worksheet 2 problem 1\n",
-    "# Jennifer Vaccaro\n",
-    "# I declare that I am the sole author of this program and\n",
-    "# that I followed the rules given in the\n",
-    "# course syllabus.\n",
+    "# Jennifer Vaccaro and David Dumas\n",
+    "# We declare that we are the only authors of this program and\n",
+    "# that we followed the rules given in the course syllabus.\n",
     "\n",
     "def double_letters_basic(text):\n",
-    "    '''Returns an integer count of any \n",
-    "    repeated characters from the input text'''\n",
+    "    \"\"\"Returns an integer count of any \n",
+    "    repeated characters from the input text\"\"\"\n",
     "    count = 0\n",
     "    previous_char = \"\"\n",
     "    for c in text:\n",
@@ -71,8 +65,69 @@
     "        previous_char = c\n",
     "    return count\n",
     "\n",
-    "text = input()\n",
-    "print(double_letters_basic(text))"
+    "examples = [\"aardvark\", \n",
+    "            \"space wasps---most of whom are not hostile!!\",\n",
+    "            \"the raccoon nook keepers in Mississippi cooked the books\",\n",
+    "            \"Oolong\"]\n",
+    "\n",
+    "for s in examples:\n",
+    "    print(\"double_letters_basic(\\\"{}\\\") returns {}\".format(s,double_letters_basic(s)))\n",
+    "\n",
+    "print()\n",
+    "text = input(\"Enter text to pass to double_letters_basic:\")\n",
+    "print(\"double_letters_basic(\\\"{}\\\") returns {}\".format(text,double_letters_basic(text)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is alternative solution that uses the function zip() to iterate over pairs of adjacent characters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "double_letters_basic(\"aardvark\") returns 1\n",
+      "double_letters_basic(\"space wasps---most of whom are not hostile!!\") returns 3\n",
+      "double_letters_basic(\"the raccoon nook keepers in Mississippi cooked the books\") returns 9\n",
+      "double_letters_basic(\"Oolong\") returns 0\n",
+      "\n",
+      "Enter text to pass to double_letters_basic:Hello everyone!!\n",
+      "double_letters_basic(\"Hello everyone!!\") returns 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MCS 275 Spring 2021 Worksheet 2 problem 1\n",
+    "# David Dumas\n",
+    "# I declare that I wrote this solution myself\n",
+    "# and followed the rules in the syllabus.\n",
+    "\n",
+    "def double_letters_basic(text):\n",
+    "    \"\"\"Count repeated characters in `text`\"\"\"\n",
+    "    count=0\n",
+    "    for ccur,cnext in zip(text,text[1:]):\n",
+    "        if ccur == cnext:\n",
+    "            count += 1\n",
+    "    return count\n",
+    "\n",
+    "examples = [\"aardvark\", \n",
+    "            \"space wasps---most of whom are not hostile!!\",\n",
+    "            \"the raccoon nook keepers in Mississippi cooked the books\",\n",
+    "            \"Oolong\"]\n",
+    "for s in examples:\n",
+    "    print(\"double_letters_basic(\\\"{}\\\") returns {}\".format(s,double_letters_basic(s)))\n",
+    "\n",
+    "print()\n",
+    "text = input(\"Enter text to pass to double_letters_basic:\")\n",
+    "print(\"double_letters_basic(\\\"{}\\\") returns {}\".format(text,double_letters_basic(text)))"
    ]
   },
   {
@@ -101,43 +156,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "double_letters(\"aardvark\") returns 1\n",
+      "double_letters(\"space wasps---most of whom are not hostile!!\") returns 0\n",
+      "double_letters(\"the raccoon nook keepers in Mississippi cooked the books\") returns 9\n",
+      "double_letters(\"Oolong\") returns 1\n",
+      "double_letters(\"Keep writing those cool Python scripts\",letters=\"efg\") returns 1\n",
+      "\n",
+      "Enter text to pass to double_letters:Hello everyone!!\n",
+      "double_letters(\"Hello everyone!!\") returns 1\n"
+     ]
+    }
+   ],
    "source": [
-    "# MCS 275 Spring 2021 Worksheet 2 problem 2\n",
-    "# Jennifer Vaccaro\n",
-    "# I declare that I am the sole author of this program and\n",
-    "# that I followed the rules given on the quiz and the\n",
-    "# course syllabus.\n",
+    "# MCS 275 Spring 2021 Worksheet 2 problem 1\n",
+    "# Jennifer Vaccaro and David Dumas\n",
+    "# We declare that we are the only authors of this program and\n",
+    "# that we followed the rules given in the course syllabus.\n",
     "\n",
     "def double_letters(text, letters=\"abcdefghijklmnopqrstuvwxyz\"):\n",
-    "    '''Returns an integer count of any \n",
-    "    repeated letters from the input text'''\n",
+    "    \"\"\"Returns an integer count of any \n",
+    "    repeated letters from the input text\"\"\"\n",
     "    text = text.lower()\n",
-    "    count = 0\n",
-    "    current_run = 0\n",
+    "    count = 0 # total number of double letters seen so far\n",
+    "    consecutive_duplicates = 0\n",
     "    previous_char = \"\"\n",
     "\n",
-    "    # Instead of counting each double letter, \n",
-    "    # count the length of a run. When the run ends,\n",
-    "    # check if it had length exactly 1.\n",
+    "    # Look at each character from the string and keep\n",
+    "    # track of the number of consecutive duplicates \n",
+    "    # that have been seen.\n",
     "    for c in text:\n",
-    "        if c in letters and c == previous_char:\n",
-    "            current_run += 1\n",
+    "        if c == previous_char:\n",
+    "            # This character duplicates the previous one\n",
+    "            consecutive_duplicates += 1\n",
     "        else:\n",
-    "            if current_run == 1:\n",
+    "            # This character is different from the previous\n",
+    "            # one, so we know previous_char was repeated exactly \n",
+    "            # consecutive_duplicates+1 times.\n",
+    "            if previous_char in letters and consecutive_duplicates==1:\n",
+    "                # Exactly one duplicate of a character in letters\n",
+    "                # is the definition of a double letter\n",
     "                count += 1\n",
-    "            current_run = 0\n",
+    "            consecutive_duplicates = 0\n",
     "        previous_char = c\n",
-    "    \n",
-    "    #Check\n",
-    "    if current_run == 1:\n",
+    "\n",
+    "    # Check for double letter at the end of the string\n",
+    "    # (which wouldn't be seen by the loop, since it only\n",
+    "    #  checks for one when a different character is seen)\n",
+    "    if previous_char in letters and consecutive_duplicates == 1:\n",
     "        count += 1\n",
     "    return count\n",
     "\n",
-    "text = input()\n",
-    "print(double_letters(text))"
+    "examples = [\"aardvark\", \n",
+    "            \"space wasps---most of whom are not hostile!!\",\n",
+    "            \"the raccoon nook keepers in Mississippi cooked the books\",\n",
+    "            \"Oolong\"]\n",
+    "\n",
+    "for s in examples:\n",
+    "    print(\"double_letters(\\\"{}\\\") returns {}\".format(s,double_letters(s)))\n",
+    "\n",
+    "# Example with custom letter list\n",
+    "s=\"Keep writing those cool Python scripts\"\n",
+    "print(\"double_letters(\\\"{}\\\",letters=\\\"efg\\\") returns {}\".format(s,double_letters(s,letters=\"efg\")))\n",
+    "    \n",
+    "print()\n",
+    "text = input(\"Enter text to pass to double_letters:\")\n",
+    "print(\"double_letters(\\\"{}\\\") returns {}\".format(text,double_letters(text)))"
    ]
   },
   {
@@ -418,9 +508,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the starting integer for RATS:1225\n",
+      "1225\n",
+      "4466\n",
+      "1111\n",
+      "2222\n",
+      "4444\n",
+      "8888\n",
+      "16777\n",
+      "34589\n",
+      "112333\n",
+      "444455\n",
+      "889999\n",
+      "1788899\n",
+      "1177777\n",
+      "4558889\n",
+      "13444447\n",
+      "77888888\n",
+      "156667777\n",
+      "233444489\n",
+      "1112278888\n",
+      "11999\n",
+      "11119\n",
+      "1223\n",
+      "RATS starting with 1225 end in a periodic sequence [4444, 8888, 16777, 34589, 112333, 444455, 889999, 1788899, 1177777, 4558889, 13444447, 77888888, 156667777, 233444489, 1112278888, 11999, 11119, 1223]\n"
+     ]
+    }
+   ],
    "source": [
     "# MCS 275 Spring 2021 Worksheet 2 problem 4\n",
     "# Jennifer Vaccaro\n",
@@ -428,37 +549,59 @@
     "# that I followed the rules given on the quiz and the\n",
     "# course syllabus.\n",
     "\n",
+    "def reverse_int(n):\n",
+    "    \"\"\"Reverse the digits of integer n and return\n",
+    "    the resulting integer\"\"\"\n",
+    "    n_str = str(n)\n",
+    "    # Note: int() drops leading zeros automatically, so\n",
+    "    # e.g. int(\"0012\") returns 12\n",
+    "    return int(n_str[::-1])\n",
+    "\n",
     "def next_rats(n):\n",
     "    '''Reverses, adds, then sorts an integer n'''\n",
-    "    n_str = str(n)\n",
-    "    n_str_reversed = n_str[::-1]\n",
-    "    n_reversed = int(n_str_reversed)\n",
-    "    sum_int = n+n_reversed\n",
-    "    sum_list = list(str(sum_int))\n",
-    "    sum_list.sort()\n",
-    "    s = \"\"\n",
-    "    sorted_int = int(s.join(sum_list))\n",
-    "    return sorted_int\n",
+    "    sum_int = n + reverse_int(n)\n",
+    "    sum_digits = list(str(sum_int)) # list of digits as characters; use a list so we can sort\n",
+    "    sum_digits.sort() \n",
+    "    # Note: sorted order of \"0\",...,\"9\" is same as that of 0,...,9, so it is OK to sort\n",
+    "    # the digits as a list of characters instead of a list of ints!\n",
+    "    sorted_sum_str = \"\".join(sum_digits) # join characters into a single string\n",
+    "    return int(sorted_sum_str)\n",
     "\n",
-    "start_n = int(input())\n",
+    "max_generations = 150\n",
+    "start_n = int(input(\"Enter the starting integer for RATS:\"))\n",
     "rats_list = [start_n]\n",
     "n = start_n\n",
-    "for i in range(150):\n",
+    "periodic = False\n",
+    "for _ in range(max_generations):  # Conventional to use _ as name of a variable that is never used\n",
     "    print(n)\n",
     "    n = next_rats(n)\n",
     "    if n in rats_list:\n",
     "        print(\"RATS starting with {} end in a periodic sequence {}\".format(start_n, rats_list[rats_list.index(n):]))\n",
-    "        exit()\n",
+    "        periodic = True\n",
+    "        break\n",
     "    else:\n",
     "        rats_list.append(n)\n",
-    "print(\"No periodic sequence found in 150 rats iterations\")\n"
+    "\n",
+    "if not periodic:\n",
+    "    print(\"No periodic sequence found in {} rats iterations\".format(max_generations))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Text circles\n",
+    "NOTE: If you try 1225 as the starting point, you'll get a message slightly different from the one suggested in the problem statement.  That's OK.  An eventually periodic sequence can be described in many correct ways.  For example,\n",
+    "`QYUDABCABCABCABCABC...`\n",
+    "could be correctly described in either of these ways:\n",
+    "* A string that ends in A,B,C repeating forever\n",
+    "* A string that ends in C,A,B repeating forever"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Text circles\n",
     "\n",
     "Write a program `circle.py` that takes one command line argument, `r`, and then prints 40 lines of text, each containing 80 characters.  The output should make a picture of a circle, using characters as pixels.  When `r=20` the circle should be slightly too big to fit in the block of text, and when `r=1` it should be nearly too small to have any empty space inside.\n",
     "\n",
@@ -622,7 +765,7 @@
     "            print(\"X\",end=\"\")\n",
     "        else:\n",
     "            print(\" \",end=\"\")\n",
-    "    print(\"\") # Make a newline"
+    "    print() # Make a newline"
    ]
   },
   {
@@ -658,7 +801,7 @@
     "            print(\".\",end=\"\")\n",
     "        else:\n",
     "            print(\" \",end=\"\")\n",
-    "    print(\"\") # Make a newline"
+    "    print() # Make a newline"
    ]
   }
  ],
