Problem 4 is also worth 4 points

--- a/quizzes/quiz2.ipynb
+++ b/quizzes/quiz2.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem 4: RATS classifier\n",
+    "## Problem 4: RATS classifier - 4 points\n",
     "\n",
     "Recall the RATS process described in Worksheet 2.  This associated to any integer `n` a sequence of numbers, such as `n=12` leading to the sequence `12, 33, 66, 123, 444, 888, 1677, 3489, 12333, 44556, ...`.\n",
     "\n",
