Change links to use HTML versions instead of github

--- a/quizzes/quiz2.ipynb
+++ b/quizzes/quiz2.ipynb
@@ -24,9 +24,9 @@
     "### Resources you are allowed to consult\n",
     "For this quiz:\n",
     " * [The course coding standards document](https://dumas.io/teaching/2021/spring/mcs275/doc/codestd.pdf)\n",
-    " * [The Python tour](https://nbviewer.jupyter.org/github/daviddumas/mcs275spring2021/blob/master/samplecode/python_tour.ipynb?flush_cache=true)\n",
-    " * [Worksheet 1 Solutions](https://github.com/daviddumas/mcs275spring2021/blob/master/worksheets/worksheet1_solns.ipynb)\n",
-    " * [Worksheet 2 Solutions](https://github.com/daviddumas/mcs275spring2021/blob/master/worksheets/worksheet2_soln.ipynb)\n",
+    " * [The Python tour](https://dumas.io/teaching/2021/spring/mcs275/nbview/samplecode/python_tour.html)\n",
+    " * [Worksheet 1 Solutions](https://dumas.io/teaching/2021/spring/mcs275/nbview/worksheets/worksheet1_solns.html)\n",
+    " * [Worksheet 2 Solutions](https://dumas.io/teaching/2021/spring/mcs275/nbview/worksheets/worksheet2_soln.html)\n",
     " \n",
     "### Cite your sources\n",
     "\n",
