--- a/worksheets/worksheet1_solns.ipynb
+++ b/worksheets/worksheet1_solns.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Worksheet 1 Solutions \n",
+    "## MCS 275 Spring 2021 -- David Dumas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Part II: Python Calisthenics\n",
     "\n",
     "This section gives a series of exercises (of roughly increasing complexity) in which you'll write programs that are based on things you are expected to have seen in a prerequisite course.  We'll talk about these in Lectures 2-3 as well, and the first quiz will cover the same kind of review material."
