--- a/projects/project1.ipynb
+++ b/projects/project1.ipynb
@@ -104,7 +104,7 @@
     "\n",
     "**Superclass:** None\n",
     "\n",
-    "**Purpose:** Not intended to be instantiated.  Serves as the base class for other event types, defining attributes and methods all subclasses must implement.\n",
+    "**Purpose:** Not intended to be instantiated.  Serves as the base class for other task types, defining attributes and methods all subclasses must implement.\n",
     "\n",
     "**Required attributes:**\n",
     "* `description` : A string describing the task\n",
@@ -114,7 +114,7 @@
     "* `__init__(self,description)` : Saves description as an instance attribute.  Sets active to `False`.\n",
     "* `next_time(self)` : Raises an `Exception` because `active` is `False` (signaling to the caller that there is no \"next\" time to run the task); in subclasses, this method will return the next time the task needs to run.\n",
     "* `run(self)` : Raises an `Exception` because the base class `Task` is not intended to ever be used directly; in subclasses, this method will simulate running the task by printing a message.\n",
-    "* `retire(self,t)` :  Raises an `Exception` because the base class `Event` is not intended to ever be used directly; in subclasses, this method will retire all scheduled times the task is supposed to run that are less than or equal to `t`.  In essence, this method is used to tell the `Task` object: \"The current time is after `t`, so forget about everything up to that time.\"\n",
+    "* `retire(self,t)` :  Raises an `Exception` because the base class `Task` is not intended to ever be used directly; in subclasses, this method will retire all scheduled times the task is supposed to run that are less than or equal to `t`.  In essence, this method is used to tell the `Task` object: \"The current time is after `t`, so forget about everything up to that time.\"\n",
     "\n",
     "**Example of using this class:**\n",
     "\n",
@@ -263,7 +263,7 @@
     "* `retire(self,t)` :  Retire (forget about) all scheduled instances of this task that would happen at or before time `t`, so that a subsequent call to `next_time()` will return a time greater than `t` (or raise an exception).  If the result of this is that every remaining instance of the ask is retired, then set `active` to `False`.\n",
     "* `num_until(self,end)` : Return the number times the task is scheduled to run at or before time `end` (an integer), not including any instances that have been retired.  This would be `0` if all have been retired (equivalently, if `active` is `False`).\n",
     "\n",
-    "**Note:** This class represents an infinite sequence of actions.  Therefore, the attribute `active` is always `True`, and the classs doesn't have a `num_total(...)` method (since there are always infinitely many actions left).\n",
+    "**Note:** This class represents an infinite sequence of actions.  Therefore, the attribute `active` is always `True`, and the class doesn't have a `num_total(...)` method (since there are always infinitely many actions left).\n",
     "\n",
     "**Example of using this class:**\n",
     "\n",
@@ -348,6 +348,7 @@
    "source": [
     "## Revision History\n",
     "\n",
+    "* 2021-01-29 Corrected a few typos (including one instance of calling the base class Event instead of Task)\n",
     "* 2021-01-25 Initial publication"
    ]
   }
