Minor changes (have __repr__ call __str__)

--- a/worksheets/worksheet3_soln.ipynb
+++ b/worksheets/worksheet3_soln.ipynb
@@ -79,7 +79,7 @@
     "        \n",
     "    def __repr__(self):\n",
     "        \"\"\"String representation looks like 301.5K\"\"\"\n",
-    "        return \"{}K\".format(self.temp)\n",
+    "        return str(self)\n",
     "\n",
     "    def __str__(self):\n",
     "        \"\"\"String representation looks like 301.5K\"\"\"\n",
@@ -125,7 +125,7 @@
     "\n",
     "    def __repr__(self):\n",
     "        \"\"\"String representation like '301.5K difference' \"\"\"\n",
-    "        return \"{}K difference\".format(self.dif)\n",
+    "        return str(self)\n",
     "\n",
     "    def __str__(self):\n",
     "        \"\"\"String representation like '301.5K difference' \"\"\"\n",
@@ -183,10 +183,21 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "273.15K\n100.0K difference\n100.0\nFalse\nTrue\n200.0K difference\n200.0K difference\n1.3660992128866922\n546.3K\n546.3K\nIf a sample of helium starts at 0°C, you'd need to heat it to a temperature\nof 273.15°C in order to double the average kinetic energy of the atoms.\n"
+      "273.15K\n",
+      "100.0K difference\n",
+      "100.0\n",
+      "False\n",
+      "True\n",
+      "200.0K difference\n",
+      "200.0K difference\n",
+      "1.3660992128866922\n",
+      "546.3K\n",
+      "546.3K\n",
+      "If a sample of helium starts at 0°C, you'd need to heat it to a temperature\n",
+      "of 273.15°C in order to double the average kinetic energy of the atoms.\n"
      ]
     }
    ],
@@ -575,10 +586,13 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Mjqqt btwqi!\nHello world!\nHennm everymle!\nHello everyone!\n"
+      "Mjqqt btwqi!\n",
+      "Hello world!\n",
+      "Hennm everymle!\n",
+      "Hello everyone!\n"
      ]
     }
    ],
@@ -647,7 +661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
