--- a/worksheets/worksheet4.ipynb
+++ b/worksheets/worksheet4.ipynb
@@ -628,6 +628,8 @@
     "* Setup upon entering a with-block: Check to see if it is Monday.  If it is, print a message and wait until it is no longer Monday.  (Repeatedly wait 5 seconds and check again, until the day is no longer Monday.)\n",
     "* Cleanup upon leaving a with-block: Check to see if it is Monday.  If it is,  print a message and wait until it is no longer Monday.  (Repeatedly wait 5 seconds and check again, until the day is no longer Monday.)\n",
     "\n",
+    "Notice that this decorator checks the day of week in both setup and cleanup phases; this matters because the day might change during execution of the with-block.\n",
+    "\n",
     "Your class should use `current_weekday()` defined above to get the weekday.  That way, you can temporarily change `current_weekday()` to return something else (e.g. return `\"Mon\"` all the time, or return `\"Mon\"` the first time it is called, and `\"Tue\"` every other time, ...) for testing purposes.\n",
     "\n",
     "Example of use:"
