Clarify description UnboundedRecurringTask.retire()

--- a/projects/project1.ipynb
+++ b/projects/project1.ipynb
@@ -260,7 +260,7 @@
     "```\n",
     "run: class=UnboundedRecurringTask description=\"Organize sock drawer\" time=7710\n",
     "```\n",
-    "* `retire(self,t)` :  Retire (forget about) all scheduled instances of this task that would happen at or before time `t`, so that a subsequent call to `next_time()` will return a time greater than `t` (or raise an exception).  If the result of this is that every remaining instance of the ask is retired, then set `active` to `False`.\n",
+    "* `retire(self,t)` :  Retire (forget about) all scheduled instances of this task that would happen at or before time `t`, so that a subsequent call to `next_time()` will return a time greater than `t`.\n",
     "* `num_until(self,end)` : Return the number times the task is scheduled to run at or before time `end` (an integer), not including any instances that have been retired.  This would be `0` if all have been retired (equivalently, if `active` is `False`).\n",
     "\n",
     "**Note:** This class represents an infinite sequence of actions.  Therefore, the attribute `active` is always `True`, and the class doesn't have a `num_total(...)` method (since there are always infinitely many actions left).\n",
@@ -348,6 +348,7 @@
    "source": [
     "## Revision History\n",
     "\n",
+    "* 2021-02-04 Minor clarification in description of `UnboundedRecurringTask.retire(...)`.\n",
     "* 2021-01-29 Corrected a few typos (including one instance of calling the base class Event instead of Task)\n",
     "* 2021-01-25 Initial publication"
    ]
