--- a/worksheets/worksheet5.ipynb
+++ b/worksheets/worksheet5.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "It simulates a vending machine, and is similar to a project assigned in MCS 260 in Fall 2020.  Run it, use the \"help\" command in its text interface to learn about the available commands, and try them out.\n",
     "\n",
-    "This script has a bug which affects certain purchases.  For example, try starting the script and depositing \\\\$1.15 as four quarters, one dime, and one nickel, and then selecting item 4 (costing \\\\$1.10).  The expected behavior would be: The item is purchased, and \\\\$0.05 is given in change.  Instead, the script will get stuck (and may require you to press Control-C in the terminal to exit).\n",
+    "This script has a bug which affects certain purchases.  For example, try starting the script and depositing \\$1.15 as four quarters, one dime, and one nickel, and then selecting item 4 (costing \\$1.10).  The expected behavior would be: The item is purchased, and \\$0.05 is given in change.  Instead, the script will get stuck (and may require you to press Control-C in the terminal to exit).\n",
     "\n",
     "Debug the program using an active debugging technique (`print(...)` or `pdb`) and find the cause of the infinite loop that prevents the program from executing as intended.  Devise and test a fix."
    ]
@@ -161,15 +161,15 @@
    "source": [
     "### 5. Unexpected exception competition\n",
     "\n",
-    "Working with the other members of your breakout room, write a Python program that looks like it will work but which actually exits with an exception.  Your goal to should to make something that will pass a casual inspection by your peers, creating the impression that the program would do a certain thing, while actually containing a hidden bug.  The program's docstring should describe its apparent (not actual) behavior.  Try to conceal the circumstances leading to the exception, so that even the traceback shown on exit doesn't immediately reveal the true source of the problem.  Follow these rules:\n",
+    "Working with the other members of your breakout room, write a Python program that looks like it will work but which actually exits with an exception. Your goal to should to make something that will pass a casual inspection by your peers, creating the impression that the program would do a certain thing, while actually containing a hidden bug. The program's docstring should describe its desired (not actual) behavior.  Try to conceal the circumstances leading to the exception, so that even the traceback shown on exit doesn't immediately reveal the true source of the problem.  Follow these rules:\n",
     "\n",
     "* Do not use any web searches!\n",
     "* The program must be completely contained in one `.py` file, and not depend on any modules other than the Python standard library.\n",
     "* The program should not modify any files on the computer where it is run.\n",
     "\n",
-    "When you are done, give your program to the TA.\n",
+    "When you are done, use the Zoom \"Ask for help\" function, and give your code to the TA. She will swap your buggy programs, and you will try to solve another team's problem.\n",
     "\n",
-    "When all breakout rooms have finished, there will be a short break, and then you will receive the program from another breakout room.  Your task is to run the program in `pdb` and to use post-mortem analysis to determine the complete cause of the exception.  For example, it is not enough to say \"the list was empty, and element 0 was requested, producing IndexError\"; you need to be able to explain exactly how the program's operation led to that circumstance.  Prepare a written description of the reason in a text file and signal your TA."
+    "Your task is to run the program in `pdb` and to use post-mortem analysis to determine the complete cause of the exception, including what the software author may have intended. Then we will rejoin the Main Room, and each group will explain the other team's bug. Don't just say \"the list was empty, and element 0 was requested, producing IndexError\"; you'll want to explain exactly how the program's operation led to that circumstance. "
    ]
   }
  ],
